Name: builder
Version: 0.19

Synopsis:
    Library to download and build Elm projects
Description:
    Solves dependencies, crawls Elm files, parallelizes downloads,
    parallelizes compilation, reports coherent errors, etc.

Homepage:
    http://github.com/evancz/builder

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright: (c) 2013-present Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
    type:     git
    location: git://github.com/evancz/builder.git

Flag dev {
    Description: Turn off optimization and make warnings errors
    Default: False
}


Library
    if flag(dev)
        ghc-options: -O0 -W
    else
        ghc-options: -threaded -O2

    Hs-Source-Dirs:
        src

    exposed-modules:
        Elm.Assets,
        Elm.Project,
        Elm.Project.Constraint,
        Elm.Project.Licenses,
        File.Compile,
        File.Crawl,
        File.IO,
        File.Plan,
        Reporting.Error,
        Reporting.Progress,
        Reporting.Progress.Terminal,
        Reporting.Task,
        Stuff.Info

    other-modules:
        Deps.Explorer,
        Deps.Get,
        Deps.Paths,
        Deps.Solver.Internal,
        Deps.Verify,
        Deps.Website,
        Elm.Project.Internal,
        File.Find,
        Reporting.Error.Assets,
        Reporting.Error.Compile,
        Reporting.Error.Crawl,
        Reporting.Error.Help,
        Reporting.Progress.Bar,
        Stuff.Paths,
        Utils.Json

    Build-depends:
        aeson >= 0.11,
        ansi-wl-pprint >= 0.6.7.3,
        base >=4.2 && <5,
        binary >= 0.7 && < 0.8,
        containers >= 0.3 && < 0.6,
        bytestring >= 0.9 && < 0.11,
        directory >= 1.0 && < 2.0,
        edit-distance,
        elm-compiler == 0.19,
        filepath >= 1 && < 2.0,
        fsnotify >= 0.2.1,
        HTTP >= 4000.2.5 && < 4000.4,
        http-client >= 0.4.15 && < 0.5,
        http-client-tls >= 0.2 && < 0.3,
        http-types >= 0.7 && < 0.9,
        logict,
        mtl >= 2.2.1 && < 3,
        network >= 2.4 && < 2.7,
        scientific,
        text,
        time,
        unordered-containers,
        vector >= 0.10 && < 0.12,
        zip-archive
